--- a/res/layout/activity_compiler.xml
+++ b/res/layout/activity_compiler.xml
@@ -13,39 +13,45 @@
         android:id="@+id/welomeText"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:gravity="center_horizontal"
         android:text="Compiler Activity"
-        android:textSize="20sp"
-        android:layout_marginBottom="20dp"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="20sp" />
 
     <ProgressBar
         android:id="@+id/progressCircle1"
-        android:layout_gravity="center_horizontal"
-
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" 
-        android:layout_marginBottom="20dp"/>
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="20dp" />
 
     <ProgressBar
         android:id="@+id/progressBar1"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="fill_parent"
         android:layout_height="20dp"
-        android:progress="0"
+        android:layout_gravity="center_vertical"
         android:layout_marginTop="10dp"
-        android:layout_gravity="center_vertical" />
-<!--         android:visibility="visible"/> -->
+        android:progress="0" />
+    <!-- android:visibility="visible"/> -->
 
     <TextView
-        android:layout_marginTop="50dp"
         android:id="@+id/statusText1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
+        android:layout_marginTop="50dp"
         android:gravity="center_horizontal"
         android:text="@string/compile_status"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textSize="15sp" />
-   
+
+    <TextView
+        android:id="@+id/compile_message"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+         />
+
 </LinearLayout>
