--- a/res/layout/activity_start.xml
+++ b/res/layout/activity_start.xml
@@ -13,40 +13,39 @@
         android:id="@+id/welomeText"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:gravity="center_horizontal"
         android:text="@string/start_text_notready"
-        android:textSize="20sp"
-        android:layout_marginBottom="20dp"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="20sp" />
 
     <ProgressBar
         android:id="@+id/progressCircle"
-        android:layout_gravity="center_horizontal"
-
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" 
-        android:layout_marginBottom="20dp"/>
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="20dp" />
 
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="fill_parent"
         android:layout_height="20dp"
-        android:progress="0"
-        android:max="@integer/folder_size"
-        android:layout_marginTop="10dp"
         android:layout_gravity="center_vertical"
-        android:visibility="invisible"/>
+        android:layout_marginTop="10dp"
+        android:max="@integer/folder_size"
+        android:progress="0"
+        android:visibility="invisible" />
 
     <TextView
         android:id="@+id/statusText"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:gravity="center_horizontal"
         android:text="@string/copy_compressed"
-        android:textSize="15sp"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:layout_marginBottom="20dp" />
+        android:textSize="15sp" />
 
     <Button
         android:id="@+id/button1"
@@ -54,6 +53,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|bottom"
         android:text="@string/start_button_text"
-        android:visibility="invisible"/>
-    
+        android:visibility="invisible" />
+
 </LinearLayout>
