--- a/res/layout/activity_editor.xml
+++ b/res/layout/activity_editor.xml
@@ -5,44 +5,45 @@
     android:orientation="vertical"
     tools:context=".EditorActivity" >
 
+    
     <EditText
         android:id="@+id/editText1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight=".8"
+        android:layout_weight="1"
         android:ems="10"
         android:gravity="top|left"
         android:inputType="textMultiLine"
-        android:lines="10"
-        android:maxLines="15"
-        android:minLines="1"
         android:scrollbars="vertical" >
+
+        <!-- android:lines="10" -->
+        <!-- android:maxLines="15" -->
+        <!-- android:minLines="1" -->
 
         <requestFocus />
     </EditText>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
+    
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:text="@string/Menu" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-
-
-
-            <Button
-                android:id="@+id/button1"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/Menu" />
-        </LinearLayout>
+    <!-- <LinearLayout -->
+    <!-- android:layout_width="match_parent" -->
+    <!-- android:layout_height="wrap_content" -->
+    <!-- android:orientation="vertical" > -->
 
 
-    </LinearLayout>
+    <!-- <LinearLayout -->
+    <!-- android:layout_width="match_parent" -->
+    <!-- android:layout_height="wrap_content" -->
+    <!-- android:orientation="horizontal" > -->
+
+
+    <!-- </LinearLayout> -->
+
+
+    <!-- </LinearLayout> -->
 
 </LinearLayout>
